update and start
